<resources>
    <string name="app_name">Sudoku is Fun</string>

    <string-array name="digits">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
        <item name="6">6</item>
        <item name="7">7</item>
        <item name="8">8</item>
        <item name="9">9</item>
    </string-array>

    <string-array name="categories">
        <item>@string/puzzle_category_easy</item>
        <item>@string/puzzle_category_medium</item>
        <item>@string/puzzle_category_hard</item>
        <item>@string/puzzle_category_myPuzzles</item>
    </string-array>

    <string-array name="letters">
        <item name="1">A</item>
        <item name="2">B</item>
        <item name="3">C</item>
        <item name="4">D</item>
        <item name="5">E</item>
        <item name="6">F</item>
        <item name="7">G</item>
        <item name="8">H</item>
        <item name="9">I</item>
    </string-array>

    <integer-array name="colors">
        <item name="1">@color/c1</item>
        <item name="2">@color/c2</item>
        <item name="3">@color/c3</item>
        <item name="4">@color/c4</item>
        <item name="5">@color/c5</item>
        <item name="6">@color/c6</item>
        <item name="7">@color/c7</item>
        <item name="8">@color/c8</item>
        <item name="9">@color/c9</item>
    </integer-array>

    <string-array name="characterUnits">
        <item>@string/unit_digits</item>
        <item>@string/unit_letters</item>
        <item>@string/unit_colors</item>
    </string-array>

    <string-array name="characterUnitsValues">
        <item>@string/pref_key_characterUnitDigits</item>
        <item>@string/pref_key_characterUnitLetters</item>
        <item>@string/pref_key_characterUnitColors</item>
    </string-array>

    <string-array name="keyboardSizes">
        <item>@string/button_small</item>
        <item>@string/button_large</item>
    </string-array>

    <string-array name="keyboardSizesValues">
        <item>@string/pref_key_keyboardSizeSmall</item>
        <item>@string/pref_key_keyboardSizeLarge</item>
    </string-array>

    <string name="unit_digits">Digits</string>
    <string name="unit_letters">Letters</string>
    <string name="unit_colors">Colors</string>

    <string name="intent_extra_imagePath">EXTRA_IMAGE_PATH</string>
    <string name="intent_extra_tab">EXTRA_TAB</string>

    <string name="activity_label_camera">Camera</string>
    <string name="activity_label_statistics">Statistics</string>
    <string name="activity_label_ocrTrainer">Number Trainer</string>
    <string name="activity_label_gallery">Crop Image</string>
    <string name="activity_label_puzzle">Sudoku</string>
    <string name="activity_label_settings">Settings</string>
    <string name="activity_label_newGame">New Game</string>

    <string name="pref_privacy_policy">Privacy Policy</string>
    <string name="pref_key_privacy_policy">pref_key_privacy_policy</string>
    <string name="pref_summary_privacy_policy">View privacy policy</string>
    <string name="pref_key_highlightNeighbors">pref_key_highlightNeighbors</string>
    <string name="pref_key_highlightNumbers">pref_key_highlightNumbers</string>
    <string name="pref_key_updatePossibilities">pref_key_updatePossibilities</string>
    <string name="pref_key_deleteOcr">pref_key_deleteOcr</string>
    <string name="pref_key_deleteStats">pref_key_deleteStats</string>
    <string name="pref_key_externalSigCount">pref_key_externalSigCount</string>
    <string name="pref_key_autoSave">pref_key_autoSave</string>
    <string name="pref_key_showConflicts">pref_key_showConflicts</string>
    <string name="pref_key_trainOcr">pref_key_trainOcr</string>
    <string name="pref_key_lastPuzzle">pref_key_lastPuzzle</string>
    <string name="pref_key_restorePuzzles">pref_key_restorePuzzles</string>
    <string name="pref_key_wipeStats">pref_key_wipeStats</string>
    <string name="pref_key_useDefaultPuzzleIcon">pref_key_useDefaultPuzzleIcon</string>
    <string name="pref_key_loadedFirstImage">pref_key_loadedFirstImage</string>

    <string name="pref_key_keyboardSize">pref_key_keyboardSize</string>
    <string name="pref_key_keyboardSizeSmall">pref_key_keyboardSizeSmall</string>
    <string name="pref_key_keyboardSizeLarge">pref_key_keyboardSizeLarge</string>
    <string name="pref_keyboardSize_summary">The size of the onscreen keyboard.\nCurrent size: %s</string>
    <string name="pref_key_hideAssistanceOptions">pref_key_hideAssistanceOptions</string>
    <string name="pref_hideAssistance_Title">Don\'t Show Computer Assist Options</string>
    <string formatted="false" name="pref_hideAssistance_Summary">Check this if you don\'t want to be tempted by the \"%s\" or \"%s\" options in game</string>

    <string name="pref_key_characterUnit">pref_key_characterUnit</string>
    <string name="pref_key_characterUnitLetters">pref_key_characterUnitLetters</string>
    <string name="pref_key_characterUnitDigits">pref_key_characterUnitDigits</string>
    <string name="pref_key_characterUnitColors">pref_key_characterUnitColors</string>
    <string name="pref_characterUnit_Summary">The unit to display on the Sudoku grid.\nCurrent unit: %s</string>

    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_rename">Rename</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_small">Small</string>
    <string name="button_large">Large</string>
    <string name="button_statistics">Stats</string>
    <string name="button_newGame">New Game</string>
    <string name="button_settings">Settings</string>
    <string name="button_resumeGame">Resume Game</string>
    <string name="button_takePicture">Take Picture</string>
    <string name="button_cropPicture">Crop Picture</string>
    <string name="button_got_it">Got it!</string>

    <string name="message_areYouSure">Are you sure?</string>
    <string name="message_inProgress">%s (In progress)</string>
    <string name="message_finished">%s (FINISHED)</string>
    <string name="message_areYouSure_deletePuzzles">Are you sure you want to delete these %s puzzles?</string>
    <string name="message_areYouSure_deletePuzzle">Are you sure you want to delete this puzzle?</string>
    <string name="message_areYouSure_deleteSaves">Are you sure you want to delete these game saves?</string>
    <string name="message_selectACategory">Select a category for this puzzle</string>
    <string name="message_renamePuzzle">Rename puzzle</string>
    <string name="message_enterNewName">Enter the new name for this puzzle</string>
    <string name="message_alreadySolved">The puzzle is already solved</string>
    <string name="message_centerImageCamera">Center the Sudoku puzzle inside the box as straight as possible</string>
    <string name="message_centerImageGallery">Place the box over the Sudoku puzzle with the gridlines as close as possible</string>

    <string name="puzzle_category_easy">Easy</string>
    <string name="puzzle_category_medium">Medium</string>
    <string name="puzzle_category_hard">Hard</string>
    <string name="puzzle_category_myPuzzles">My Puzzles</string>
    <string name="puzzle_category_DEFAULT">@string/puzzle_category_myPuzzles</string>

    <string name="menu_clear">Clear Puzzle</string>
    <string name="menu_newPuzzle">Save as New Empty Puzzle</string>
    <string name="menu_saveProgress">Save Progress</string>
    <string name="menu_deleteSave">Delete Saved Game</string>
    <string name="menu_solvePuzzle">Solve Puzzle*</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_undo">Undo</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_changeCategory">Set Category</string>
    <string name="menu_good">Looks Good</string>
    <string name="menu_bad">Not Right</string>
    <string name="menu_findPossibilities">Find All Cell Possibilities*</string>
    <string name="menu_puzzleInfo">Puzzle Info</string>
    <string name="menu_show_errors">Show Errors</string>

    <!--these are in the NewGameActivity-->
    <string name="menu_fromGallery">From Gallery</string>
    <string name="menu_fromCamera">From Camera</string>
    <string name="menu_newRandomPuzzle">New Random Puzzle</string>
    <string name="menu_newBlankPuzzle">New Blank Puzzle</string>
    <string name="menu_randomizeThisPuzzle">Randomize This Puzzle</string>

    <string name="message_noPuzzles">There are no puzzles in this category</string>
    <string name="message_noData">No Data</string>
    <string name="any_category">Any Category</string>
    <string name="created_on">Created on %s</string>
    <string name="previewProcessedImage">Preview Processed Image</string>
    <string name="clickToPreview">Tap a number on the grid to preview</string>
    <string name="thisLooksLikeA">This looks like a [%d]</string>
    <string name="cellIsEmpty">This Cell is Empty</string>
    <string name="ocrActivityWelcomeMessage">To train the computer to recognize digits more efficiently, first load a picture of a sudoku puzzle using either the camera or gallery icon at the top right.\n\nAfter you load a sudoku puzzle, tap one of the digits to preview it\n\nThen use the dropdown box at the bottom to tell the computer which digit you selected and hit Train</string>
    <string name="puzzle_information">Puzzle Information</string>

    <string name="filename_ocr">ocrdata-trained</string>

    <string name="pref_message_delete_ocr_areYouSure">Are you sure you want to permanently delete the saved character data?</string>
    <string name="pref_message_delete_ocr_failure">Failed to delete OCR training data</string>
    <string name="pref_message_delete_ocr_success">Deleted OCR training data</string>
    <string name="pref_ocr_first_run">pref_ocr_first_run</string>

    <integer name="icon_size">200</integer>

    <string name="privacy_policy_url">https://www.danbuntu.com/policy/sudokuisfun-policy.htm</string>

</resources>

