<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_camera"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="@string/menu_fromCamera"
        app:showAsAction="always"/>

    <item android:id="@+id/menu_gallery"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/menu_fromGallery"
        app:showAsAction="always"/>

    <item android:id="@+id/menu_blank_puzzle"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_newBlankPuzzle"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_cab_obfuscate"
        android:title="@string/menu_newRandomPuzzle"
        android:icon="@android:drawable/ic_media_play"
        app:showAsAction="never"/>

    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never"/>

</menu>